5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1876_1286.log
== TEST (2019-07-03 18:16:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
sed=eval(input("nutrientes:"))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:16:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
sed=eval(input(""))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
sed=float(input(""))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
sed=eval(float(""))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:18:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
sed=array(float(input("")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:18:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
sed=array(int(input("")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:18:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(int(input("")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:19:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(dtype=float(input("")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:19:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(dtype=float(""))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:19:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=eval(dtype=float(""))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:19:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=eval(int(float(""))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
File "XXXX", line 5
    frutas=array([[10,20,30],[50,40,10],[30,10,40]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=eval(int(float("")))
sobremesa=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=eval(int(input("")))
sobremesa=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:21:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=eval(int(input("")))
sobremesa=array([[10,20,30],[50,40,10],[30,10,40]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:21:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=eval(int(input("")))
sobremesa=array([[10,20,30],[50,40,10],[30,10,40]])
print("")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:24:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=eval(int(input("")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:24:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=eval(int(input(",")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=eval(int(input(",")))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=int(input(","))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:26:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=int(input(","))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:26:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=int(input(""))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:26:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

nutrientes=int(input(""))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:27:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
sobremesa=int(input())
nutrientes=int(input(""))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:27:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

sobremesa=eval(int(input()))
nutrientes=int(input(""))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:27:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

sobremesa=array(eval(int(input()))
nutrientes=int(input(""))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=int(input(""))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:27:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

sobremesa=array(eval(int(input()))
nutrientes=eval(int(input("")))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=eval(int(input("")))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:28:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

sobremesa=array(eval(int(input()))
	nutrientes=eval(int(input("")))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=eval(int(input("")))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:28:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

sobremesa=array(eval(int(input()))
nutrientes=array(eval(int(input(""))))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=array(eval(int(input(""))))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:28:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

sobremesa=array(eval(int(input()))
nutriente=array(eval(int(input(""))))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutriente=array(eval(int(input(""))))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:28:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

sobremesa=array(eval(int(input()))
print(vitamina C)
nutriente=array(eval(int(input(""))))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    print(vitamina C)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:30:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=int(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))

nutriente=array(eval(int(input(""))))
print("vitamina C:")

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:31:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=int(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))

nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input()))
x=int(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    x=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input()))
x=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    x=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input("")))
x=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    x=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input("")))
				 
x=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 6
    x=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input("")))
				 
x_1=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 6
    x_1=float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:33:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval([[10,20,30,],[50,40,10,],[30,10,40,]]))
				 
x_1=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:34:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]]))
				 
x_1=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]]))
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:34:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x_1=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))
nutriente=array(eval(int(input(""))))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:34:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x_1=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:34:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))

frutas=array([[10,20,30],[50,40,10],[30,10,40]])

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:35:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

sed=int(input("vitaminas:"))
frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

sed=int(input(""))
frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x=float(input("vitamina C: "))
y=int(input("Calcio: "))
z=int(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

sed=int(input(""))
frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
				 
x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:38:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
array=array
frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))	 
x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:38:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))	 
x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("digite um nome:")
frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    frutas=array([[10,20,30,],[50,40,10,],[30,10,40,]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
nutrientes=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    nutrientes=array([[10,20,30,],[50,40,10,],[30,10,40,]])
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
array=([x,y,z])
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    array=([x,y,z])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
n=([x,y,z])
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    n=([x,y,z])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
ones([x,y,z])
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    ones([x,y,z])
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
([x,y,z])
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 6
    array=array(eval(int(input(""))))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
print([x,y,z])
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    print([x,y,z])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
print(x,y,z)
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    print(x,y,z)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
print("x","y","z")
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 4
    print("x","y","z")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
nome=int(input("frutas:")
=array([[10,20,30,],[50,40,10,],[30,10,40,]])
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    array=array(eval(int(input(""))))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
array=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    array=array(eval(int(input(""))))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
frutas=array(eval(int(input(""))))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    frutas=array(eval(int(input(""))))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
nutrientes=array(eval(int(input([[x,y,z]])))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=array(eval(int(input([[x,y,z]])))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
nutrientes=eval(int(input([[x,y,z]])))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=eval(int(input([[x,y,z]])))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
nutrientes=eval(int([[x,y,z]])))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=eval(int([[x,y,z]])))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
nutrientes=eval(int([[x,y,z]]))

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 5
    nutrientes=eval(int([[x,y,z]]))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:43:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")

x=float(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 6
    x=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:43:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")

x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
-- ERROR:
File "XXXX", line 6
    x=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
print("abacate:",round([10]))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
File "XXXX", line 5
    print("abacate:",round([10]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
print("abacate:",round([10]))
x=int(input("vitamina C: "))
	print("abacate:",round[10],0)
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
File "XXXX", line 5
    print("abacate:",round([10]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
x=int(input("vitamina C: "))
	print("abacate:",round[10],0)
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
File "XXXX", line 5
    x=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
x=int(input("vitamina C: "))
print("abacate:",round[10],0)
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
File "XXXX", line 5
    x=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:")
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
File "XXXX", line 5
    x=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:"))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

nome=int(input("frutas:"))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:46:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(input("")))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:46:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(input()))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:47:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(input(",")))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:47:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input(",")))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
File "XXXX", line 5
    x=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:47:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input(","))))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:48:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input([[10,20,30,],[50,40,10,],[30,10,40]]))))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:48:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(input([[10,20,30,],[50,40,10,],[30,10,40]]))))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:48:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(eval(int(([[10,20,30,],[50,40,10,],[30,10,40]]))))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:49:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([10],0))
print("manga:", round([20],0))
print("pera:", round([30],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:50:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))
x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([30],0))
print("manga:", round([50],0))
print("pera:", round([40],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:28:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

x=int(input("vitamina C: "))
y=float(input("Calcio: "))
z=float(input("magnesio: "))

print("abacate:", round([1],0))
print("manga:", round([2],0))
print("pera:", round([3],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:29:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([1],0))
print("manga:", round([2],0))
print("pera:", round([3],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:29:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0],0))
print("manga:", round([2],0))
print("pera:", round([3],0))
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:29:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([2],0))
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([2],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:29:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([0]))
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([0]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:29:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([1]))
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([1])
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([1],0)
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1],0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

	print("abacate:", round([0])
	print("manga:", round([1],0)
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 6
    print("abacate:", round([0])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
	print("manga:", round([1],0)
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1],0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([1],0)
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1],0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
	print("manga:", round([1],0)
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1],0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([1])
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([0])
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([0])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:31:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([1],1)
print("pera:", round([3],0))
			
-- ERROR:
File "XXXX", line 7
    print("manga:", round([1],1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:32:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas=array(([[10,20,30,],[50,40,10,],[30,10,40]]))

print("abacate:", round([0])
print("manga:", round([1])
print("pera:", round([3],0))
			
-- EXECUTION TIME:
0.76387
-- ERROR:
  File "/home/codebench/codes/1876/1286/main.py", line 7
    print("manga:", round([1])
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
